--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_reload_button2">ReloadButton2</string>
-    <string name="notonline">No Internet Connexion, press here to retry</string>
+    <string name="notonline">No Internet Connexion, press to retry</string>
 
 </resources>
